Fix calendar navbar styling

--- a/ssfl/templates/base/layout.jinja2
+++ b/ssfl/templates/base/layout.jinja2
@@ -7,9 +7,9 @@
     <title>{{ tab_title }}</title>
 
 
-    {% assets "css_bundle" %}
-        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>
-    {% endassets %}
+{#    {% assets "css_bundle" %}#}
+{#        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>#}
+{#    {% endassets %}#}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
@@ -23,7 +23,7 @@
             crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/dist/bundle.js"></script>
     <script type="text/javascript" src="/static/js/sst_javascript.js"></script>
-
+{##}
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.0/dropzone.min.js"></script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 
