Preliminary Quick Links Page

--- a/ssfl/templates/base/button.jinja2
+++ b/ssfl/templates/base/button.jinja2
@@ -1,4 +1,5 @@
-<a class="button {{ button.button_type }}"
+<a type="button" class="btn btn-primary {{ button.button_type }}"
+
         {% if button.extra_styling %}
                 style="{{ button.extra_styling }}"
         {% endif %}
