--- a/ssfl/templates/base/form_entry.jinja2
+++ b/ssfl/templates/base/form_entry.jinja2
@@ -3,6 +3,7 @@
     parameters:  element class: el_class
                  element name:  el_name
                  element placeholder: el_placeholder  (optional)
+    !!!! NOTE: el_class is not being expanded.  Need to determine what is being passed (enabling messes up form)
 -->
 
 <div class="el_class container pt-3 border border-dark w-50">
