--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -51,7 +51,7 @@
                     </a>
 
                     <div class="navbar-dropdown has-text-white">
-                        <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='quick-access') }}">
+                        <a class="navbar-item" href="{{ url_for('main.sst_get_quick_links', page='quick-access') }}">
                             Quick Links
                         </a>
                         <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='news-index') }}">
