Create prototye command file set for admin/sysadmin.

--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -94,9 +94,6 @@
                         <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_edit') }}">
                             Edit DB Page
                         </a>
-                        <a class="navbar-item" href="{{ url_for('admin_bp.up_down_load_json_template') }}">
-                            Upload/edit JSON
-                        </a>
                         <a class="navbar-item" href="{{ url_for('admin_bp.make_story_json_template') }}">
                             Manage JSON templates
                         </a>
@@ -134,6 +131,9 @@
                         </a>
                         <a class="navbar-item" href="{{ url_for('sysadmin_bp.manage_users') }}">
                             Manage Users
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('sysadmin_bp.sst_login') }}">
+                            SsT Login
                         </a>
                     </div>
                 </div>
