--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -135,6 +135,9 @@
                         <a class="navbar-item" href="{{ url_for('sysadmin_bp.sst_login') }}">
                             SsT Login
                         </a>
+                        <a class="navbar-item" href="{{ url_for('sysadmin_bp.manage_files') }}">
+                            Manage Files
+                        </a>
                     </div>
                 </div>
             </div>
