Some bug fixes - photo rotation, docs in forms, force new pic folders to lower case.

--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -1,5 +1,5 @@
 <!-- Class devBorder and friends is in file 'mystyles.css' - comment in/out to toggle -->
-<container class="devBorder container-fluid" {{ float_dir }}>
+<container class="devborder container-fluid" {{ float_dir }}>
     <div class="row">
         <div class="col">
             <div class="devBorder2" style="max-width: {{ slideshow.width }}px;
