--- a/ssfl/templates/photos/upload_photos.jinja2
+++ b/ssfl/templates/photos/upload_photos.jinja2
@@ -16,19 +16,27 @@
                     Identify the photos by providing a name for the gallery/collection in the box below. Do this
                     before adding any photos to the upload box. If the gallery/collection name exists, then the photos
                     will be added to that collection.
+                    <br>
+                    New photo folders will be forced to lower case.  Because there are many existing folders that used
+                    upper case names and the system is case sensitive, it is possible to create two different folders
+                    with the same name but different capitalization.  Unfortunately, this can lead to two photos with
+                    the same slug and/or cause the system to be unable to find a photo.
+                    <br>
+                    Ideally we will be able to convert all folders to the lower case convention, but till that is done,
+                    please be CAREFUL.
                 </li>
                 <li>
                     Add photos by dragging them into the upload box below. Photos should have names that will be used
                     to identify them when associating them with a story. It is fine to differentiate a set of related
                     photos with a name and number. Avoid names containing spaces - use a hyphen or underscore instead.
-
+                    <br>
                     As photos are uploaded, they will be removed from the upload window and placed in the completed
                     pane.
+                    <br>
                     Each photo will have an indicator of whether it succeeded or failed.
-
+                    <br>
                     Multiple photos may be uploaded at a time by either dragging a group of photos (multiple selection)
-                    or
-                    a folder containing multiple photos into the upload pane.
+                    or a folder containing multiple photos into the upload pane.
                 </li>
             </ol>
             <div class="customA-font-size-title container pt-3">
