--- a/ssfl/templates/base/picture.jinja2
+++ b/ssfl/templates/base/picture.jinja2
@@ -1,4 +1,4 @@
-<div class="{{ photo.css_class }} float-left px-3 {{ do_rotation }}" style="max-width: {{ photo.width }}px">
+<div class="{{ photo.css_class }} float-left px-3 {{ do_rotation }}" style="max-width: {{ photo.width }}px;">
     <figure class="figure">
         {%  if photo.title %}
             <figcaption class="figure-caption has-text-black {{ photo.title_class }}">{{ photo.title }}</figcaption>
