--- a/ssfl/templates/base/snippet.jinja2
+++ b/ssfl/templates/base/snippet.jinja2
@@ -7,23 +7,23 @@
     This may also be included as a component of a story or other higher level
     element in which case it will provide the surrounding structure.
 -->
-<div class="container-fluid">
-    {% if item.cell_type=='story' %}
-        {% set item2 = item.story %}
-        <div class="col">
-            {% include 'main/snippet_story.jinja2' %}
-        </div>
-    {% endif %}
-    {% if item.cell_type=='calendar' %}
-        {% set item2 = item.calendar.cal_data %}
-        <div class="col ">
-            {% include 'main/calendar_plugin.jinja2' %}
-        </div>
-    {% endif %}
-    {% if item.cell_type=='sign' %}
-        {% set item2 = item.sign.data %}
-        <div class="col ">
-            {% include 'base/snippet_sign.jinja2' %}
-        </div>
-    {% endif %}
+<div class="card" style="">
+        {% if item.cell_type=='story' %}
+            {% set item2 = item.story %}
+            <div class="col">
+                {% include 'main/snippet_story.jinja2' %}
+            </div>
+        {% endif %}
+        {% if item.cell_type=='calendar' %}
+            {% set item2 = item.calendar.cal_data %}
+            <div class="col ">
+                {% include 'main/calendar_plugin.jinja2' %}
+            </div>
+        {% endif %}
+        {% if item.cell_type=='sign' %}
+            {% set item2 = item.sign.data %}
+            <div class="col ">
+                {% include 'base/snippet_sign.jinja2' %}
+            </div>
+        {% endif %}
 </div>
