--- a/ssfl/static/sass/sst_styles.scss
+++ b/ssfl/static/sass/sst_styles.scss
@@ -1,11 +1,29 @@
+@charset "utf-8";
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+
+
+.imagecaption {             /* Make caption size fit figure (and figure css below) */
+    padding: 3px;
+    margin: 10px;
+    float: left;
+    border: 1px solid black;
+}
+
+.title {                /* prevent title overlapping nav bar */
+    margin-top: 0.5rem;
+}
+
+button {
+  padding: 4px;
+}
+
 .card-body {
   display: flex;
 }
 .card-title {
   margin-left: auto;
-  font-family: 'Yatra One', cursive;
+  //font-family: 'Helvetica', cursive;
   font-weight: bold;
-  font-size: 110%;
   color: black;
 }
 
