--- a/ssfl/templates/main/snippet_story.jinja2
+++ b/ssfl/templates/main/snippet_story.jinja2
@@ -2,12 +2,12 @@
     <h3 class="card-title">{{ story.title | safe }}</h3>
 {% endif %}
 <div class="card-body" style="">
-    <div class="card-img-top" style="max-width:{{ story.photo.width }}px; float:{{ story.photo.alignment }}; ">
+    <div class="card-img-top" style="max-width:{{ story.photo.width }}px; ">
         {% set photo = story.photo %}
             {% include 'base/picture.jinja2' %}
-
+    </div>
     {{ story.snippet| safe }}</div>
-</div>
+
 {% with button=story.read_more %}
     {% include 'base/button.jinja2' %}
 {% endwith %}
