Graph support working with full restore from template

--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -138,6 +138,9 @@
                         <a class="navbar-item" href="{{ url_for('sysadmin_bp.manage_files') }}">
                             Manage Files
                         </a>
+                        <a class="navbar-item" href="{{ url_for('sysadmin_bp.manage_graphs') }}">
+                            Manage Graphs
+                        </a>
                     </div>
                 </div>
             </div>
