--- a/ssfl/templates/main/snippet_calendar.jinja2
+++ b/ssfl/templates/main/snippet_calendar.jinja2
@@ -1,4 +1,4 @@
-    <div class="title">Upcoming Events</div>
+    <div class="title text-wrap">Upcoming Events</div>
     <div>
         {% for event in calendar.events %}
             <div class="mt-3">
