--- a/ssfl/templates/main/snippet_slideshow.jinja2
+++ b/ssfl/templates/main/snippet_slideshow.jinja2
@@ -1,5 +1,5 @@
 {% if story.title %}
-    <div class="title">{{ story.title | safe }}</div>
+    <div class="title text-wrap">{{ story.title | safe }}</div>
 {% endif %}
 {#<div style="max-width:{{ story.photo.width }}px; float:{{ story.photo.alignment }}">#}
 <div>
