Remove comment from template that was causing display problems

--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -1,4 +1,4 @@
-<!-- Class devBorder and friends is in file 'mystyles.css' - comment in/out to toggle -->
+{#<!-- Class devBorder and friends is in file 'mystyles.css' - comment in/out to toggle -->#}
 <container class="devborder container-fluid" {{ float_dir }}>
     <div class="row">
         <div class="col">
