Remove debugging chars from slideshow & picture templates.

--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -14,7 +14,7 @@
                 {% endif %}
                 <div class="slideshow" interval="{{ slideshow.rotation }}">
                     {% for photo in slideshow.pictures %}
-                        x{% include 'base/picture.jinja2' %}y
+                        {% include 'base/picture.jinja2' %}
                     {% endfor %}
                 </div>
             </div>
